2008-07-28  Anders Carlsson  <andersca@apple.com>

        Reviewed by Kevin Decker.

        Based on a patch by Dimcho Balev.
        
        https://bugs.webkit.org/show_bug.cgi?id=18676
        <rdar://problem/6106578>
        Plug-In API Proposal: Enable plugins to receive response body when an HTTP error occurs

        * Plugins/WebBaseNetscapePluginStream.h:
        Add NPP_GetValue pointer.
        
        * Plugins/WebBaseNetscapePluginStream.mm:
        (-[WebBaseNetscapePluginStream setPlugin:]):
        Initialize NPP_GetValue.
        
        (-[WebBaseNetscapePluginStream wantsAllStreams]):
        Call NPP_GetValue.
        
        * Plugins/WebPlugInStreamLoaderDelegate.h:
        * WebCoreSupport/WebNetscapePlugInStreamLoaderClient.h:
        * WebCoreSupport/WebNetscapePlugInStreamLoaderClient.mm:
        (WebNetscapePlugInStreamLoaderClient::wantsAllStreams):
        Implement this and call down to the stream.

2008-07-28  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam.

        <rdar://problem/6105529> 
        https://bugs.webkit.org/show_bug.cgi?id=19659
        Turning off plugins causes crash
        
        When an active page has plug-ins, and plug-ins are disabled, they will be stopped and will
        end up in a state where they don't have an event handler. Because of this, we need to 
        check that the plug-in has been started before calling the event handler.
        
        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView sendActivateEvent:]):
        (-[WebBaseNetscapePluginView sendDrawRectEvent:]):
        (-[WebBaseNetscapePluginView setHasFocus:]):
        (-[WebBaseNetscapePluginView mouseDown:]):
        (-[WebBaseNetscapePluginView mouseUp:]):
        (-[WebBaseNetscapePluginView mouseEntered:]):
        (-[WebBaseNetscapePluginView mouseExited:]):
        (-[WebBaseNetscapePluginView handleMouseMoved:]):
        (-[WebBaseNetscapePluginView mouseDragged:]):