@@ -184,10 +184,12 @@ typedef struct {
     AGLContext oldContext;
 } PortState_GL;
 
-@class NSInputContext;
-@interface NSResponder (IMSecretsIKnowAbout)
-- (NSInputContext *)inputContext;
+#if defined(BUILDING_ON_TIGER) || defined(BUILDING_ON_LEOPARD)
+@class NSTextInputContext;
+@interface NSResponder (AppKitDetails)
+- (NSTextInputContext *)inputContext;
 @end
+#endif
 
 @interface WebPluginRequest : NSObject
 {
@@ -1935,13 +1937,13 @@ static inline void getNPRect(const NSRect& nr, NPRect& npr)
 
 #pragma mark NSTextInput implementation
 
-- (NSInputContext *)inputContext
+- (NSTextInputContext *)inputContext
 {
 #ifndef NP_NO_CARBON
     if (![self isStarted] || eventModel == NPEventModelCarbon)
         return nil;
 #endif
-        
+
     return [super inputContext];
 }
 
