@@ -1,3 +1,11 @@
+2008-07-29  Mark Rowe  <mrowe@apple.com>
+
+        Build fix.
+
+        * Plugins/WebBaseNetscapePluginView.mm:
+        (-[WebBaseNetscapePluginView inputContext]):
+        * WebView/WebHTMLView.mm:
+
 2008-07-28  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Kevin Decker.
